--- a/markup/components/head/head.pug
+++ b/markup/components/head/head.pug
@@ -8,11 +8,7 @@ mixin head(data)
     meta(content="telephone=no", name="format-detection")
     //- This make sence for mobile browsers. It means, that content has been optimized for mobile browsers
     meta(name="HandheldFriendly", content="true")
-
-    |<!--[if IE 8 ]><link href="%=static=%css/main_ie8%=hash=%%=min=%.css" rel="stylesheet" type="text/css"><![endif]-->
-    |<!--[if IE 9 ]><link href="%=static=%css/main_ie9%=hash=%%=min=%.css" rel="stylesheet" type="text/css"><![endif]-->
-    |<!--[if (gt IE 9)|!(IE)]><!--><link href="%=static=%css/main%=hash=%%=min=%.css" rel="stylesheet" type="text/css"><!--<![endif]-->
-
+    link(href='%=static=%css/main%=hash=%%=min=%.css' rel='stylesheet' type='text/css')
     if data.useSocialMetaTags
         meta(property="og:title", content="#{data.title}")
         meta(property="og:title", content="")
@@ -26,6 +22,6 @@ mixin head(data)
         link(rel="image_src", href="")
 
     link(rel="icon" type="image/x-icon" href="favicon.ico")
+    script(src='%=static=%js/separate-js/jquery-3.2.1.min.js')
     script.
         (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
-    |<!--[if lt IE 9 ]><script src="%=static=%js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script><meta content="no" http-equiv="imagetoolbar"><![endif]-->
