--- a/markup/static/stylus/vars.styl
+++ b/markup/static/stylus/vars.styl
@@ -1,2 +1,7 @@
-// File for less-vars.
-// For example: main colors, paddings and so on.
+// colors
+borderColor = #e5e5e5
+bgColor = #f7f7f7
+darkGreyColor = #1a1b1c
+mainColor = #d2a36f
+// containers
+container = 1104px
