--- a/markup/static/stylus/vars.styl
+++ b/markup/static/stylus/vars.styl
@@ -1,7 +1,20 @@
-// colors
+// ##########
+// Цвета
+// ##########
+colorMain = #000
+colorInput = #000
+colorPlaceholder = #000
 borderColor = #e5e5e5
 bgColor = #f7f7f7
 darkGreyColor = #1a1b1c
 mainColor = #d2a36f
-// containers
+// ##########
+// Базовые настройки сетки сайта
+// ##########
 container = 1104px
+
+// ##########
+// Шрифты
+// ##########
+$font-main = Arial, sans-serif; // Основной шрифт сайта
+$font-second = Times New Roman, sans-serif; // Дополнительный шрифт
