--- a/markup/static/stylus/vars.styl
+++ b/markup/static/stylus/vars.styl
@@ -1,7 +1,7 @@
 // ##########
 // Цвета
 // ##########
-colorMain = #000
+colorMain = #1a1b1c
 colorInput = #000
 colorPlaceholder = #000
 borderColor = #e5e5e5
@@ -16,5 +16,5 @@ container = 1104px
 // ##########
 // Шрифты
 // ##########
-$font-main = Arial, sans-serif; // Основной шрифт сайта
-$font-second = Times New Roman, sans-serif; // Дополнительный шрифт
+fontMain = Arial, sans-serif; // Основной шрифт сайта
+fontSecond = Times New Roman, sans-serif; // Дополнительный шрифт
