--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -11,6 +11,7 @@ html, body
     font-family fontMain
     font-weight 400
     letter-spacing 1px/16px
+    background-color: bgColor
 
 .page__wrapper
     min-height 100%
