--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -20,6 +20,5 @@ html(class="no-js", lang="en")
         block footer
 
         block scripts
-
-        //- Main scripts. You can replace it, but I recommend you to leave it here
+        script(src='%=static=%js/separate-js/jquery-ui.min.js')
         script(src='%=static=%js/main%=hash=%%=min=%.js')
