--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -3,5 +3,17 @@
     padding: 24px 0
 
     &__col
+        min-width: 235px
+
+        &_no_width
+            min-width: initial
+
+        &_push_right
+            margin-left: auto
+
         &:not(:last-child)
             margin-right: 24px
+
+    &__button
+        width: 60px
+        height: 60px
