--- a/markup/components/filter/filter.pug
+++ b/markup/components/filter/filter.pug
@@ -1,7 +1,17 @@
 include ../range-slider/range-slider
+include ../selectbox/selectbox
+include ../icon-button/icon-button
 
 mixin filter()
     +b.FORM(method='POST' action='#').filter&attributes(attributes)
+        +e.col
+            +selectbox('Escort')
+                +selectbox-control(name='escorts')
+                    option(value='escorts') escorts
+                    option(value='item1') item 1
+                    option(value='item2') item 2
+                    option(value='item3') item 3
+
         +e.col
             +range-slider
                 +range-slider-fields
@@ -22,3 +32,14 @@ mixin filter()
                         +range-slider-input(type='hidden' name='cost-max')._max
                         +range-slider-text $
                 +range-slider-control#filter-cost
+
+        +e.col
+            +selectbox('Incall/Outcall')
+                +selectbox-control(name='escorts')
+                    option(value='escorts') escorts
+                    option(value='item1') item 1
+                    option(value='item2') item 2
+                    option(value='item3') item 3
+
+        +e.col._no_width._push_right
+            +icon-button('filter-button', 21, 12).__button
