--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -3,7 +3,7 @@ include ../components/header/header
 include ../components/footer/footer
 include ../components/filter/filter
 include ../components/container/container
-include ../components/model-common-info/model-common-info
+include ../components/rating/rating
 
 block header
     +header
@@ -11,7 +11,7 @@ block header
 block content
     +container
         +filter
-        +model-common-info('Megan', 22, 390)
+        +rating(4)
 
 block footer
     +footer
