short-info block

--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -3,6 +3,7 @@ include ../components/header/header
 include ../components/footer/footer
 include ../components/filter/filter
 include ../components/container/container
+include ../components/short-info/short-info
 
 block header
     +header
