--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -2,8 +2,6 @@ photoTapeItemWidth = 88px
 
 .photo-tape
     display: block
-    //overflow-x: scroll
-    //overflow-y: hidden
 
     &__items
         display: flex
@@ -11,8 +9,11 @@ photoTapeItemWidth = 88px
         &:hover ^[0]__photo
             opacity: .3
 
-    &__item:hover &__photo
-        opacity: 1
+    &__item
+        position: relative
+
+        &:hover ^[0]__photo
+            opacity: 1
 
     &__link
         position: relative
@@ -58,7 +59,11 @@ photoTapeItemWidth = 88px
             height: 8px
 
     &__text
+        position: absolute
+        top: 100%
+        left: 0
         display: block
+        width: 100%
         max-width: photoTapeItemWidth
         padding: 12px 12px 10px
         background-color: bgColor
