add additional font

--- a/markup/static/stylus/vars.styl
+++ b/markup/static/stylus/vars.styl
@@ -16,5 +16,5 @@ container = 1104px
 // ##########
 // Шрифты
 // ##########
-fontMain = Arial, sans-serif; // Основной шрифт сайта
-fontSecond = Times New Roman, sans-serif; // Дополнительный шрифт
+fontMain = 'Roboto Condensed', Arial, sans-serif // Основной шрифт сайта
+fontSecond = Times New Roman, sans-serif // Дополнительный шрифт
