--- a/markup/static/stylus/fonts.styl
+++ b/markup/static/stylus/fonts.styl
@@ -1,18 +1,77 @@
-/* Your custom fonts here */
+/* roboto-condensed-300 - latin */
+@font-face
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/roboto-condensed-v14-latin-300.eot');
+    src: local('Roboto Condensed Light'), local('RobotoCondensed-Light'),
+        url('../fonts/roboto-condensed-v14-latin-300.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/roboto-condensed-v14-latin-300.woff2') format('woff2'),
+        url('../fonts/roboto-condensed-v14-latin-300.woff') format('woff'),
+        url('../fonts/roboto-condensed-v14-latin-300.ttf') format('truetype'),
+        url('../fonts/roboto-condensed-v14-latin-300.svg#RobotoCondensed') format('svg')
 
-/* Example
+/* roboto-condensed-300italic - latin */
+@font-face
+    font-family: 'Roboto Condensed';
+    font-style: italic;
+    font-weight: 300;
+    src: url('../fonts/roboto-condensed-v14-latin-300italic.eot');
+    src: local('Roboto Condensed Light Italic'), local('RobotoCondensed-LightItalic'),
+        url('../fonts/roboto-condensed-v14-latin-300italic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/roboto-condensed-v14-latin-300italic.woff2') format('woff2'),
+        url('../fonts/roboto-condensed-v14-latin-300italic.woff') format('woff'),
+        url('../fonts/roboto-condensed-v14-latin-300italic.ttf') format('truetype'),
+        url('../fonts/roboto-condensed-v14-latin-300italic.svg#RobotoCondensed') format('svg')
 
-@font-face {
-    font-family: 'CustomFont';
-    src: url('../fonts/Custom-Font.eot');
-    src: url('../fonts/Custom-Font.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Custom-Font.woff') format('woff'),
-         url('../fonts/Custom-Font.svg#custom_font') format('svg');
-    font-weight: 400;       // For normal width. It could has another value
-    font-style: normal;     // Also could has another value
-    }
+/* roboto-condensed-regular - latin */
+@font-face
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/roboto-condensed-v14-latin-regular.eot');
+    src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
+        url('../fonts/roboto-condensed-v14-latin-regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/roboto-condensed-v14-latin-regular.woff2') format('woff2'),
+        url('../fonts/roboto-condensed-v14-latin-regular.woff') format('woff'),
+        url('../fonts/roboto-condensed-v14-latin-regular.ttf') format('truetype'),
+        url('../fonts/roboto-condensed-v14-latin-regular.svg#RobotoCondensed') format('svg')
 
+/* roboto-condensed-italic - latin */
+@font-face
+    font-family: 'Roboto Condensed';
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/roboto-condensed-v14-latin-italic.eot');
+    src: local('Roboto Condensed Italic'), local('RobotoCondensed-Italic'),
+        url('../fonts/roboto-condensed-v14-latin-italic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/roboto-condensed-v14-latin-italic.woff2') format('woff2'),
+        url('../fonts/roboto-condensed-v14-latin-italic.woff') format('woff'),
+        url('../fonts/roboto-condensed-v14-latin-italic.ttf') format('truetype'),
+        url('../fonts/roboto-condensed-v14-latin-italic.svg#RobotoCondensed') format('svg')
 
-// Var for using custom font
-$CustomFont: 'CustomFont', Helvetica, Arial, sans-serif;
-*/
+/* roboto-condensed-700 - latin */
+@font-face
+    font-family: 'Roboto Condensed';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/roboto-condensed-v14-latin-700.eot');
+    src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
+        url('../fonts/roboto-condensed-v14-latin-700.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/roboto-condensed-v14-latin-700.woff2') format('woff2'),
+        url('../fonts/roboto-condensed-v14-latin-700.woff') format('woff'),
+        url('../fonts/roboto-condensed-v14-latin-700.ttf') format('truetype'),
+        url('../fonts/roboto-condensed-v14-latin-700.svg#RobotoCondensed') format('svg')
+
+/* roboto-condensed-700italic - latin */
+@font-face
+    font-family: 'Roboto Condensed';
+    font-style: italic;
+    font-weight: 700;
+    src: url('../fonts/roboto-condensed-v14-latin-700italic.eot');
+    src: local('Roboto Condensed Bold Italic'), local('RobotoCondensed-BoldItalic'),
+        url('../fonts/roboto-condensed-v14-latin-700italic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/roboto-condensed-v14-latin-700italic.woff2') format('woff2'),
+        url('../fonts/roboto-condensed-v14-latin-700italic.woff') format('woff'),
+        url('../fonts/roboto-condensed-v14-latin-700italic.ttf') format('truetype'),
+        url('../fonts/roboto-condensed-v14-latin-700italic.svg#RobotoCondensed') format('svg')
