search-bar extended

--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -7,7 +7,7 @@ include ../photo-tape/photo-tape
 mixin header()
     +b.HEADER.header&attributes(attributes)
         +navbar.__navbar
-            +navbar-item
+            +navbar-item._logo
                 +navbar-link(href='#')
                     +logo
 
