--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -3,6 +3,12 @@
     align-items: center
     height: 100%
 
+    &_extended
+        background-color: #fff
+
+        & > ^[0]__close
+            display: table-cell
+
     &__input
         flex: 1
         height: 100%
@@ -19,3 +25,9 @@
         margin-right: 24px
         border: 0
         background-color: transparent
+
+    &__close
+        display: none
+        width: 60px
+        height: 60px
+        margin-right: 14px
