add temp popup to photo-tape

--- a/markup/components/photo-tape/photo-tape.pug
+++ b/markup/components/photo-tape/photo-tape.pug
@@ -15,4 +15,4 @@ mixin photo-tape()
                         +e.A.link(href='#')
                             +e.IMG(src=`static/img/content/photo-tape/${j}.jpg` alt=`Model ${j}`).photo
 
-                        +model-info-popup
+                        +model-info-popup.__popup
