--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -12,8 +12,12 @@ photoTapeItemWidth = 88px
     &__item
         position: relative
 
-        &:hover ^[0]__photo
-            opacity: 1
+        &:hover
+            & > ^[0]__popup
+                display: block
+
+            & ^[0]__photo
+                opacity: 1
 
     &__link
         position: relative
