--- a/markup/static/stylus/vars.styl
+++ b/markup/static/stylus/vars.styl
@@ -11,7 +11,10 @@ mainColor = #d2a36f
 // ##########
 // Базовые настройки сетки сайта
 // ##########
-container = 1104px
+container-width = 1104px // Ширина контейнера контента
+grid-container-width = 100% // Ширина контейнера сетки
+grid-cols = 12 // Количество колонок в сетке
+grid-gap = 24px // Расстояние между колонками
 
 // ##########
 // Шрифты
