--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -45,6 +45,7 @@
         color darkGreyColor
         text-transform uppercase
         line-height: 1.1875
+        font-size: 16px
 
     &__description
         margin-top: 2px
@@ -52,6 +53,7 @@
         color mainColor
         letter-spacing initial
         line-height: 1.1875
+        font-size: 16px
 
     &__badge
         position: absolute
