--- a/markup/components/range-slider/range-slider.styl
+++ b/markup/components/range-slider/range-slider.styl
@@ -15,6 +15,9 @@
         &:not(:last-child)
             border-right: 1px solid borderColor
 
+    &__text
+        font-size: 16px
+
     &__input
         display: block
 
