--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -10,7 +10,8 @@ html, body
     color darkGreyColor
     font-family fontMain
     font-weight 400
-    letter-spacing 1px/16px
+    font-size: 0
+    letter-spacing 1/16em
     background-color: bgColor
 
 .page__wrapper
