--- a/markup/static/stylus/vars.styl
+++ b/markup/static/stylus/vars.styl
@@ -20,4 +20,4 @@ grid-gap = 24px // Расстояние между колонками
 // Шрифты
 // ##########
 fontMain = 'Roboto Condensed', Arial, sans-serif // Основной шрифт сайта
-fontSecond = Times New Roman, sans-serif // Дополнительный шрифт
+fontSecond = 'PF Regal Text Pro', Times New Roman, sans-serif // Дополнительный шрифт
