--- a/markup/components/model-common-info/model-common-info.styl
+++ b/markup/components/model-common-info/model-common-info.styl
@@ -24,6 +24,7 @@
         text-transform: uppercase
 
     &__age
+        font-size: 16px
         margin-top: 4px
         letter-spacing initial
 
