--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -46,6 +46,7 @@ modelInfoPopupMediumXPadding = 18px
         width: 100%
         height: 60px
         border-top: 1px solid borderColor
+        font-size: 16px
         text-transform: uppercase
         text-decoration: none
         color: darkGreyColor
