--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -15,6 +15,7 @@
         border: 0
         background-color: transparent
         padding: 0 24px
+        font-size: 16px
 
         &::placeholder
             opacity 1
