--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -4,6 +4,9 @@
     box-shdow: 0 0 0 0 rgba(0, 0, 0, 0)
     transition(box-shadow)
 
+    &_masonry:not(:last-child)
+        margin-bottom: grid-gap;
+
     &:hover
         box-shadow: 0 10px 40px rgba(29, 29, 29, 0.1)
 
