--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -17,6 +17,7 @@ grid-modifiers = ( one two three four five six seven eight nine ten elevel twelv
         box-sizing border-box
         padding grid-gap (grid-gap / 2) 0
         margin 0
+        vertical-align top
 
 
         for i in range(0,(length(grid-modifiers) - 1))
