--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -1,3 +1,66 @@
-.footer {
-  display: block
-}
+.footer
+    display: block
+    padding: (60px - grid-gap) 0 60px 0
+    background-color: darkGreyColor
+    min-height: 345px
+
+    &__row
+        min-height: 114px
+
+        &:not(:last-child)
+            margin-bottom: 33px
+
+    &__col
+        height: 100%
+
+    &__heading
+        display: block
+        opacity .3
+        color #fff
+        font-size 12px
+        letter-spacing .86px
+        line-height 21px
+        text-transform uppercase
+
+        &_big
+            line-height: initial
+            margin-bottom: 2px
+            color mainColor
+            font-size 16px
+            letter-spacing 1px
+            opacity: 1
+
+    &__select
+        display: block
+        padding-right: 24px
+
+    &__social-items
+        margin-top: 21px
+
+        a:not(:last-child)
+            margin-right: 29px
+
+    &__item
+        display: block
+        width: 100%
+        height: 100%
+        text-decoration: none
+        color mainColor
+
+        &_white
+            color: #fff
+
+        span
+            color: inherit
+            display: block
+            font-size 16px
+            text-transform uppercase
+
+            &:not(:last-child)
+                margin-top: 2px
+
+    &__copyright
+        opacity .3
+        color #ffff
+        font-size 14px
+        line-height 24px
