--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -1,3 +1,8 @@
+a.button
+    display: flex
+    justify-content: center
+    align-items: center
+
 .button
     display: table-cell
     background-color: transparent
@@ -11,3 +16,7 @@
 
     &_uppercase
         text-transform: uppercase
+
+    &_dark
+        background-color darkGreyColor
+        color #fff
