--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -1,5 +1,41 @@
 .model-list
     display: block
 
+    &__header
+        display: flex
+        width: 100%
+
+        &-col
+            display: flex
+            align-items: center
+
+            &:not(:last-child)
+                margin-right: 24px
+
+            &_flexible
+                flex: 1
+
+    &__heading
+        font-family fontSecond
+        font-size 33px
+        letter-spacing initial
+
+        span
+            display: inline-block
+            vertical-align top
+            margin-left: 9px
+            color mainColor
+            font-family fontMain
+            font-size 16px
+            font-weight 700
+
+    &__control
+        min-width: 164px
+        height: 60px
+
+    &__label
+        font-size 16px
+        margin-right: 20px
+
     &__load
         margin: 40px 0
