--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -2,6 +2,8 @@
     display: block
 
     &__header
+        margin-top: 32px
+        margin-bottom: 8px
         display: flex
         width: 100%
 
