--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -21,6 +21,7 @@
         font-family fontSecond
         font-size 33px
         letter-spacing initial
+        font-weight: 400
 
         span
             display: inline-block
