--- a/markup/static/stylus/fonts.styl
+++ b/markup/static/stylus/fonts.styl
@@ -1,9 +1,9 @@
 /* roboto-condensed-300 - latin */
 @font-face
-    font-family: 'Roboto Condensed';
-    font-style: normal;
-    font-weight: 300;
-    src: url('../fonts/roboto-condensed-v14-latin-300.eot');
+    font-family: 'Roboto Condensed'
+    font-style: normal
+    font-weight: 300
+    src: url('../fonts/roboto-condensed-v14-latin-300.eot')
     src: local('Roboto Condensed Light'), local('RobotoCondensed-Light'),
         url('../fonts/roboto-condensed-v14-latin-300.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto-condensed-v14-latin-300.woff2') format('woff2'),
@@ -13,10 +13,10 @@
 
 /* roboto-condensed-300italic - latin */
 @font-face
-    font-family: 'Roboto Condensed';
-    font-style: italic;
-    font-weight: 300;
-    src: url('../fonts/roboto-condensed-v14-latin-300italic.eot');
+    font-family: 'Roboto Condensed'
+    font-style: italic
+    font-weight: 300
+    src: url('../fonts/roboto-condensed-v14-latin-300italic.eot')
     src: local('Roboto Condensed Light Italic'), local('RobotoCondensed-LightItalic'),
         url('../fonts/roboto-condensed-v14-latin-300italic.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto-condensed-v14-latin-300italic.woff2') format('woff2'),
@@ -26,10 +26,10 @@
 
 /* roboto-condensed-regular - latin */
 @font-face
-    font-family: 'Roboto Condensed';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/roboto-condensed-v14-latin-regular.eot');
+    font-family: 'Roboto Condensed'
+    font-style: normal
+    font-weight: 400
+    src: url('../fonts/roboto-condensed-v14-latin-regular.eot')
     src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
         url('../fonts/roboto-condensed-v14-latin-regular.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto-condensed-v14-latin-regular.woff2') format('woff2'),
@@ -39,10 +39,10 @@
 
 /* roboto-condensed-italic - latin */
 @font-face
-    font-family: 'Roboto Condensed';
-    font-style: italic;
-    font-weight: 400;
-    src: url('../fonts/roboto-condensed-v14-latin-italic.eot');
+    font-family: 'Roboto Condensed'
+    font-style: italic
+    font-weight: 400
+    src: url('../fonts/roboto-condensed-v14-latin-italic.eot')
     src: local('Roboto Condensed Italic'), local('RobotoCondensed-Italic'),
         url('../fonts/roboto-condensed-v14-latin-italic.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto-condensed-v14-latin-italic.woff2') format('woff2'),
@@ -52,10 +52,10 @@
 
 /* roboto-condensed-700 - latin */
 @font-face
-    font-family: 'Roboto Condensed';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/roboto-condensed-v14-latin-700.eot');
+    font-family: 'Roboto Condensed'
+    font-style: normal
+    font-weight: 700
+    src: url('../fonts/roboto-condensed-v14-latin-700.eot')
     src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
         url('../fonts/roboto-condensed-v14-latin-700.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto-condensed-v14-latin-700.woff2') format('woff2'),
@@ -65,13 +65,102 @@
 
 /* roboto-condensed-700italic - latin */
 @font-face
-    font-family: 'Roboto Condensed';
-    font-style: italic;
-    font-weight: 700;
-    src: url('../fonts/roboto-condensed-v14-latin-700italic.eot');
+    font-family: 'Roboto Condensed'
+    font-style: italic
+    font-weight: 700
+    src: url('../fonts/roboto-condensed-v14-latin-700italic.eot')
     src: local('Roboto Condensed Bold Italic'), local('RobotoCondensed-BoldItalic'),
         url('../fonts/roboto-condensed-v14-latin-700italic.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto-condensed-v14-latin-700italic.woff2') format('woff2'),
         url('../fonts/roboto-condensed-v14-latin-700italic.woff') format('woff'),
         url('../fonts/roboto-condensed-v14-latin-700italic.ttf') format('truetype'),
         url('../fonts/roboto-condensed-v14-latin-700italic.svg#RobotoCondensed') format('svg')
+
+/* PFRegalTextPro*/
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 500
+    font-style: normal
+    src: url('../fonts/PFRegalTextProMedium.eot')
+    src: url('../fonts/PFRegalTextProMedium.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProMedium.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProMedium.woff') format('woff'),
+        url('../fonts/PFRegalTextProMedium.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProMedium.svg#PFRegalTextProMedium') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 500
+    font-style: italic
+    src: url('../fonts/PFRegalTextProMediumItalic.eot')
+    src: url('../fonts/PFRegalTextProMediumItalic.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProMediumItalic.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProMediumItalic.woff') format('woff'),
+        url('../fonts/PFRegalTextProMediumItalic.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProMediumItalic.svg#PFRegalTextProMediumItalic') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 400
+    font-style: normal
+    src: url('../fonts/PFRegalTextProRegularA.eot')
+    src: url('../fonts/PFRegalTextProRegularA.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProRegularA.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProRegularA.woff') format('woff'),
+        url('../fonts/PFRegalTextProRegularA.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProRegularA.svg#PFRegalTextProRegularA') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 400
+    font-style: italic
+    src: url('../fonts/PFRegalTextProRegularAItalic.eot')
+    src: url('../fonts/PFRegalTextProRegularAItalic.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProRegularAItalic.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProRegularAItalic.woff') format('woff'),
+        url('../fonts/PFRegalTextProRegularAItalic.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProRegularAItalic.svg#PFRegalTextProRegularAItalic') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 900
+    font-style: normal
+    src: url('../fonts/PFRegalTextProBlack.eot')
+    src: url('../fonts/PFRegalTextProBlack.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProBlack.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProBlack.woff') format('woff'),
+        url('../fonts/PFRegalTextProBlack.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProBlack.svg#PFRegalTextProBlack') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 900
+    font-style: italic
+    src: url('../fonts/PFRegalTextProBlackItalic.eot')
+    src: url('../fonts/PFRegalTextProBlackItalic.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProBlackItalic.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProBlackItalic.woff') format('woff'),
+        url('../fonts/PFRegalTextProBlackItalic.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProBlackItalic.svg#PFRegalTextProBlackItalic') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 700
+    font-style: normal
+    src: url('../fonts/PFRegalTextProBold.eot')
+    src: url('../fonts/PFRegalTextProBold.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProBold.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProBold.woff') format('woff'),
+        url('../fonts/PFRegalTextProBold.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProBold.svg#PFRegalTextProBold') format('svg')
+
+@font-face
+    font-family: 'PF Regal Text Pro'
+    font-weight: 700
+    font-style: italic
+    src: url('../fonts/PFRegalTextProBoldItalic.eot')
+    src: url('../fonts/PFRegalTextProBoldItalic.eot') format('embedded-opentype'),
+        url('../fonts/PFRegalTextProBoldItalic.woff2') format('woff2'),
+        url('../fonts/PFRegalTextProBoldItalic.woff') format('woff'),
+        url('../fonts/PFRegalTextProBoldItalic.ttf') format('truetype'),
+        url('../fonts/PFRegalTextProBoldItalic.svg#PFRegalTextProBoldItalic') format('svg')
